--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,104 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# =============== #
+# Unity generated #
+# =============== #
+
+Temp/
+Obj/
+UnityGenerated/
+Library/
+
+# ============================================ #
+# Visual Studio / Rider / MonoDevelop generated #
+# ============================================ #
+
+ExportedObj/
+*.svd
+*.userprefs
+*.csproj
+*.pidb
+*.suo
+*.sln
+*.user
+*.unityproj
+*.booproj
+.vs/
+/*.userprefs
+/*.usertasks
+/*.pidb.meta
+
+# =============== #
+# OS generated     #
+# =============== #
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# =============== #
+# User-specific    #
+# =============== #
+
+/[Ll]ibrary/
+/[Tt]emp/
+/[Oo]bj/
+/[Bb]uild/
+/[Bb]uilds/
+/[Ll]ogs/
+/[Uu]ser[Ss]ettings/
+
+# =============== #
+# Build artifacts   #
+# =============== #
+
+/Assets/AssetStoreTools*
+
+# =============== #
+# Unity Package Manager   #
+# =============== #
+
+/Assets/PackageManager/
+
+# =============== #
+# Visual Studio Code generated #
+# =============== #
+
+.vscode/
+*.code-workspace
+
+# =============== #
+# Rider generated #
+# =============== #
+
+.idea/
+*.sln.iml
+
+# =============== #
+# Miscellaneous    #
+# =============== #
+
+*.apk
+*.unitypackage
+
+# =============== #
+# External tooling #
+# =============== #
+
+# Rider
+.idea
+*.sln.iml
+
+# =============== #
+# NuGet generated #
+# =============== #
+
+*.nuget.props
+*.nuget.targets
