--- a/.gitattributes
+++ b/.gitattributes
@@ -45,6 +45,7 @@
 *.tga filter=lfs diff=lfs merge=lfs -text
 *.tif filter=lfs diff=lfs merge=lfs -text
 *.tiff filter=lfs diff=lfs merge=lfs -text
+*.unity filter=lfs diff=lfs merge=lfs -text
 
 # Collapse Unity-generated files on GitHub
 *.asset linguist-generated
